--- a/public/css/style.css
+++ b/public/css/style.css
@@ -240,16 +240,16 @@ footer p{
         width: auto;
     }
     .main_content{
-        width: 100%;
+        width: auto;
     }
     .main_content .temp_form input[type="text"]{
         width: 100%;
-        padding: 0.5rem 1rem 0.5rem 1rem ;
+        padding: 1rem 1rem 1rem 1rem ;
         background-color: #1e272e;
         color: white;
         border:none;
         outline: none;
-        border-radius: 1.8rem;
+        border-radius: 1.6rem;
         font-size: 1rem;
     }
     .main_content .temp_form input[type="submit"]{
